--- a/src/css/App.css
+++ b/src/css/App.css
@@ -20,3 +20,12 @@
 .App-link {
   color: #09d3ac;
 }
+
+footer {
+  padding: 20px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
+}
